<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sunnyboy.shubham_final.MainActivity">


    <TextView
        android:text="@string/i_scream_for_ice_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/linear1" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:id="@+id/editText" />

        <Switch
            android:text="@string/dairy_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear1"
        android:id="@+id/linear2"
        android:layout_marginTop="20dp">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries= "@array/flavors"
            android:layout_marginTop="5dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:checked="true"
            android:layout_marginTop="5dp"
            android:id="@+id/toggleButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear2"
        android:id="@+id/linear3"
        android:layout_marginTop="20dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:orientation="horizontal" >

            <RadioButton
                android:text="@string/ice_creamRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:id="@+id/radioButton1" />

            <RadioButton
                android:text="@string/frozen_yogurtRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2" />

            <RadioButton
                android:text="@string/gelatoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear3"
        android:id="@+id/linear4"
        android:layout_marginTop="20dp">

        <CheckBox
            android:text="@string/sprinkles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox1" />

        <CheckBox
            android:text="@string/hot_fudge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2" />

        <CheckBox
            android:text="@string/nuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3" />

    </LinearLayout>

    <Button
        android:text="@string/treat_meButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getIceCream"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/linear4"
        android:id="@+id/treatMeButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/find_treatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFindTreat"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/treatMeButton"
        android:layout_alignStart="@+id/treatMeButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear5"
        android:layout_above="@+id/buttonFindTreat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="23dp"
            android:id="@+id/descriptionIceCreamTextView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="right"
            android:id="@+id/imageView"
             />

    </LinearLayout>


</RelativeLayout>
